2003 May 2   Stefan Urbanek <urbanek@host.sk>

    * STBundleInfo: added objectReferenceDictionary; removed unnecessary ST 
      prefix from ScriptingInfo.plist keys and added warnings for the change.;
      check for existence of ScriptingInfo.plist before using it
    * Modules: reflect changes to STBundleInfo
    * Updated all GNUmakefiles to use new path
    * STEnvironment: added initDefault - this will replace confusing 
      defaultScriptingEnvironment.
    * Added Applications
    * Added ScriptPapers application

2003 Apr 22  Stefan Urbanek <urbanek@host.sk>

    * Added library reference documentation generated by autogsdoc.
    * Added TroubleShooting.txt document
    
2003 Apr 21  Stefan Urbanek <urbanek@host.sk>

    * Version 0.7.1

2003 Apr 04  David Ayers  <d.ayers@inode.at>

    * STEngine.h: Fixed declaration to match implementation to avoid
    compiler warnings.
    * STEnvironment.h: Ditto.
    * STScriptsManager.h: Ditto.
    * STLanguage.h: Corrected declaration.
    * STScriptsManager.m: Added needed interface declaration.
    * GNUmakefile:  Added flags to show all warnings except for import.
    * Module/ObjectiveC/GNUmakefile:  Added flags to show all warnings
    except for import.
    * Module/Foundation/GNUmakefile:  Added flags to show all warnings
    except for import.
    * Module/AppKit/AppKitExceptions.m: Used variable to supress compiler
    warnings.
    * Module/AppKit/AppKitNotifications.m: Ditto.
    * Module/AppKit/GNUmakefile:  Added flags to show all warnings except
    for import.
    * Module/GDL2/GDL2Constants.m: Used variable to supress compiler
    warnings.
    * Module/GDL2/GNUmakefile: Added flags to show all warnings except
    for import.
    * Module/SimpleTranscripts/GNUmakefile: Added flags to show all warnings
    except for import.
    * Module/StepTalk/GNUmakefile: Added flags to show all warnings
    except for import.
    * Tools/stalk.m: Added needed interface declaration.